Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,31 +18,6 @@
 *
 !*/
 
-# Ignore setup files
-EngineSetup/
-cmder.zip
-SetupEngine.bat
-VisualStudioSetup.exe
-README.txt
-.gitmodules
-.gitattributes
-.gitignore
-UnrealEngine/
-Build.bat
-Cook.bat
-CookPackage.bat
-Editor.bat
-OpenEditor.lnk
-Package.bat
-PackageTest.lnk
-StartEditor.bat
-vars.bat
-Unzip.bat
-UnrealEngine.zip
-VisualStudioTools.zip
-RedirectShortcut.vbs
-BatchFiles/
-
 # C/C++ source files
 !*.c
 !*.cc
@@ -318,3 +293,28 @@ Engine/Extras/ThirdPartyNotUE/SDKs/HostLinux/**
 
 # Ignore vulkan registry
 /Engine/Source/ThirdParty/Vulkan/share/vulkan/registry/**
+
+# Ignore setup files
+EngineSetup/
+cmder.zip
+SetupEngine.bat
+VisualStudioSetup.exe
+README.txt
+.gitmodules
+.gitattributes
+.gitignore
+UnrealEngine/
+Build.bat
+Cook.bat
+CookPackage.bat
+Editor.bat
+OpenEditor.lnk
+Package.bat
+PackageTest.lnk
+StartEditor.bat
+vars.bat
+Unzip.bat
+UnrealEngine.zip
+VisualStudioTools.zip
+RedirectShortcut.vbs
+*/BatchFiles/
